--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>umer</groupId>
+    <groupId>in.KASTRO</groupId>
     <artifactId>NETFLIX</artifactId>
     <packaging>war</packaging>
     <version>1.2.2</version>
